# optivise-installer

./: index.html  package.json  pnpm-lock.yaml
scripts/: install-windows.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppCard.tsx  Layout.tsx  StatusBadge.tsx  icons.tsx
src/hooks/: useInstaller.ts
