[package]
name = "optivise-installer"
version = "1.0.0"
description = "Optivise Office Add-in Installer"
authors = ["Optivise"]
edition = "2021"

[lib]
name = "optivise_installer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.7"
